hphp/hack/test/typecheck/shape_field_punning/disabled.php.exp
ERROR: File "disabled.php", line 6, characters 14-17:
Cannot use unstable feature: `shape_field_punning` (Parsing[1002])
